--- a/src/main/resources/assets/hxcworldgen/lang/en_US.lang
+++ b/src/main/resources/assets/hxcworldgen/lang/en_US.lang
@@ -54,9 +54,9 @@ AluminiumNugget.name=Aluminium Nugget
 TitaniumNugget.name=Titanium Nugget
 PlatinumNugget.name=Platinum Nugget
 
-AventurineFragment.name=Aventurine
-RubyFragment.name=Ruby
-SapphireFragment.name=Sapphire
+AventurineFragment.name=Aventurine Fragment
+RubyFragment.name=Ruby Fragment
+SapphireFragment.name=Sapphire Fragment
 ZirconFragment.name=Zircon
 
 CopperChunk.name=Copper Chunk
