Tweaks O' Plenty IDK if IC2 Support works just yet

--- a/src/main/resources/assets/hxcworldgen/lang/en_US.lang
+++ b/src/main/resources/assets/hxcworldgen/lang/en_US.lang
@@ -6,13 +6,14 @@ SilverOre.name=Silver Ore
 LeadOre.name=Lead Ore
 NickelOre.name=Nickel Ore
 ChromiumOre.name=Chromium Ore
-AluminiumOre.name=Aluminium Ore
+AluminumOre.name=Aluminium Ore
 IlmeniteOre.name=Ilmenite Ore
 PlatinumOre.name=Platinum Ore
-AventurineOre.name=Aventurine Ore
+PeridotOre.name=Peridot Ore
 RubyOre.name=Ruby Ore
 SapphireOre.name=Sapphire Ore
 RutileOre.name=Rutile Ore
+ZincOre.name=Zinc Ore
 
 CopperBlock.name=Block of Copper
 TinBlock.name=Block of Tin
@@ -20,13 +21,17 @@ SilverBlock.name=Block of Silver
 LeadBlock.name=Block of Lead
 NickelBlock.name=Block of Nickel
 ChromiumBlock.name=Block of Chromium
-AluminiumBlock.name=Block of Aluminium
+AluminumBlock.name=Block of Aluminium
 TitaniumBlock.name=Block of Titanium
 PlatinumBlock.name=Block of Platinum
-AventurineBlock.name=Block of Aventurine
+PeridotBlock.name=Block of Peridot
 RubyBlock.name=Block of Ruby
 SapphireBlock.name=Block of Sapphire
 ZirconBlock.name=Block of Zircon
+BrassBlock.name=Block of Brass
+BronzeBlock.name=Block of Bronze
+ZincBlock.name=Block of Zinc
+SteelBlock.name=Block of Stainless Steel
 
 CopperIngot.name=Copper Ingot
 TinIngot.name=Tin Ingot
@@ -34,15 +39,19 @@ SilverIngot.name=Silver Ingot
 LeadIngot.name=Lead Ingot
 NickelIngot.name=Nickel Ingot
 ChromiumIngot.name=Chromium Ingot
-AluminiumIngot.name=Aluminium Ingot
+AluminumIngot.name=Aluminium Ingot
 TitaniumIngot.name=Titanium Ingot
 PlatinumIngot.name=Platinum Ingot
-Zirconia.name=Ceramic Zirconia
+ZirconIngot.name=Ceramic Zirconia
+BrassIngot.name=Brass Ingot
+BronzeIngot.name=Bronze Ingot
+ZincIngot.name=Zinc Ingot
+SteelIngot.name=Stainless Steel Ingot
 
-AventurineGem.name=Aventurine
+PeridotGem.name=Peridot
 RubyGem.name=Ruby
 SapphireGem.name=Sapphire
-Zircon.name=Zircon
+ZirconGem.name=Zircon
 
 CopperNugget.name=Copper Nugget
 TinNugget.name=Tin Nugget
@@ -50,14 +59,19 @@ SilverNugget.name=Silver Nugget
 LeadNugget.name=Lead Nugget
 NickelNugget.name=Nickel Nugget
 ChromiumNugget.name=Chromium Nugget
-AluminiumNugget.name=Aluminium Nugget
+AluminumNugget.name=Aluminium Nugget
 TitaniumNugget.name=Titanium Nugget
 PlatinumNugget.name=Platinum Nugget
+ZirconNugget.name=Ceramic Ziconium Fragment
+BrassNugget.name=Brass Nugget
+BronzeNugget.name=Bronze Nugget
+SteelNugget.name=Stainless Steel Nugget
+ZincNugget.name=Zinc Nugget
 
-AventurineFragment.name=Aventurine Fragment
+PeridotFragment.name=Peridot Fragment
 RubyFragment.name=Ruby Fragment
 SapphireFragment.name=Sapphire Fragment
-ZirconFragment.name=Zircon
+ZirconFragment.name=Zircon Fragment
 
 CopperChunk.name=Copper Chunk
 TinChunk.name=Tin Chunk
@@ -65,12 +79,13 @@ SilverChunk.name=Silver Chunk
 LeadChunk.name=Lead Chunk
 NickelChunk.name=Nickel Chunk
 ChromiumChunk.name=Chromium Chunk
-AluminiumChunk.name=Aluminium Chunk
+AluminumChunk.name=Aluminium Chunk
 TitaniumChunk.name=Titanium Chunk
 IlmeniteChunk.name=Ilmenite Chunk
 PlatinumChunk.name=Platinum Chunk
+ZincChunk.name=Zinc Chunk
 
-AventurineChunk.name=Aventurine Chunk
+PeridotChunk.name=Peridot Chunk
 RubyChunk.name=Ruby Chunk
 SapphireChunk.name=Sapphire Chunk
 RutileChunk.name=Rutile Chunk
@@ -94,13 +109,17 @@ SilverDust.name=Silver Dust
 LeadDust.name=Lead Dust
 NickelDust.name=Nickel Dust
 ChromiumDust.name=Chromium Dust
-AluminiumDust.name=Aluminium Dust
+AluminumDust.name=Aluminium Dust
 TitaniumDust.name=Titanium Dust
 IlmeniteDust.name=Ilmenite Dust
 PlatinumDust.name=Platinum Dust
 ZirconiumDust.name=Zirconium Dust
+BrassDust.name=Brass Dust
+BronzeDust.name=Bronze Dust
+SteelDust.name=Stainless Steel Dust
+ZincDust.name=Zinc Dust
 
-AventurineDust.name=Aventurine Dust
+PeridotDust.name=Peridot Dust
 RubyDust.name=Ruby Dust
 SapphireDust.name=Sapphire Dust
 RutileDust.name=Rutile Dust
